--- a/about.html
+++ b/about.html
@@ -89,6 +89,9 @@
 							<a href="flower.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>ပန်းစိုက်ပျိုးနည်း</a>
 						</li>
 						<li> 
+							<a href="https://websitedirectory.000webhostapp.com/farmer_server/admin_page.php" class="collapsible-header waves-effect ui_navigation active" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>အချက်အလက်အသစ်ထည့်ရန်</a>
+						</li>
+						<li> 
 							<a href="about.html" class="collapsible-header waves-effect ui_navigation active" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>About</a>
 						</li>
 					</ul>
@@ -146,7 +149,7 @@
                         အချက်အလက်အသစ်တွေကိုလည်း ပုံမှန်ထည့်ထည့်ပေးသွားမှာပါ။
                     </p>
                     <p>
-                        <br><center><span>Developed By:<a href="www.facebook.com/mmsoftware100">Team CS</a></span></center><br>
+                        <br><center><span>Developed By:<a href="https://www.facebook.com/mmsoftware100">Team CS</a></span></center><br>
                         <center>Version<span class="version"> 2.0</span></center>
                     </p>
                 </div>	
