--- a/insect.html
+++ b/insect.html
@@ -92,6 +92,9 @@
 							<a href="flower.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>ပန်းစိုက်ပျိုးနည်း</a>
 						</li>
 						<li> 
+							<a href="https://websitedirectory.000webhostapp.com/farmer_server/admin_page.php" class="collapsible-header waves-effect ui_navigation active" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>အချက်အလက်အသစ်ထည့်ရန်</a>
+						</li>
+						<li> 
 							<a href="about.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>About</a>
 						</li>
 					</ul>
