--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>farmer</title>
+	<title>Tech_News</title>
 	
 
 
@@ -32,13 +32,13 @@
 		{
 			font-family: Pyidaungsu;
 		}
-	.my_card{
-		margin-bottom: 20px;
-	}
-	.no_link{
-		text-decoration: none;
-	}
-	p
+		.my_card{
+			margin-bottom: 20px;
+		}
+		.no_link{
+			text-decoration: none;
+		}
+		p
 		{
 			padding-left: 15px;
 		}
@@ -75,21 +75,8 @@
 				<li>
 					<ul class="collapsible collapsible-accordion">
 						
-						<!-- Simple link -->
 						<li> 
-							<a href="farmer.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>စိုက်ပျိုးရေးၑဟုသုတများ</a>
-						</li>
-						<li> 
-							<a href="advice.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>သီးနံပင်များ</a>
-						</li>
-						<li> 
-							<a href="insect.html" class="collapsible-header waves-effect ui_navigation " id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>ပိုးမွှားအန္တရာယ်</a>
-						</li>
-						<li> 
-							<a href="flower.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>ပန်းစိုက်ပျိုးနည်း</a>
-						</li>
-						<li> 
-							<a href="https://websitedirectory.000webhostapp.com/farmer_server/admin_page.php" class="collapsible-header waves-effect ui_navigation active" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>အချက်အလက်အသစ်ထည့်ရန်</a>
+							<a href="home.html" class="collapsible-header waves-effect ui_navigation" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>နည်းပညာသတင်းများ</a>
 						</li>
 						<li> 
 							<a href="about.html" class="collapsible-header waves-effect ui_navigation active" id="developreportbtn"><i class="w-fa fas fa-chart-pie  ui_navigation"></i>About</a>
@@ -113,7 +100,7 @@
 				<p></p>
 			</div>
 			<div class="title_text mr-auto align-center text-center">
-				<h4 id="header_id" style="padding-left: 15px;"> တောင်သူဦးကြီးများလက်စွဲ</h4>
+				<h4 id="header_id" style="padding-left: 15px;"> နည်းပညာသတင်းများ</h4>
 			</div>
 			<div class="d-flex change-mode">
 				<!-- Navbar links -->
@@ -142,15 +129,20 @@
 				
 				<div style="width: 90%;height: 400px;margin-left: 5%;margin-top: 50px;background-color: rgba(0,0,0,0.2);">
                     <p>
-                        <span class="title">mmFarmer apk</span><br>
-                        ယခု ဗားရှင်းမှာတော့ အချက်အလက်တွေကို အရင်ဗားရှင်းလိုအသေမထည့်တော့ပဲ အင်တာနက်ချိန်ဆက်မှုရှိတာနဲ့ အချက်အလက်အသစ်တွေကို offline အဖြစ်ဖတ်နိုင်အောင်သိမ်းပေးထားနိုင်အောင် ရေးသားထားပါတယ်။ အက်ပလီကေးရှင်းကို update ထပ်ခါထပ်ခါ လုပ်စရာမလိုတော့ပါဘူး၊ အင်တာနက် ချိန်ဆက်မှုအနည်းငယ်ရှိရုံနဲ့ ဆာဗာပေါ်ကအချက်အလက်အသစ်တွေကို မိမိဖုန်းထဲမှာရောက်နေမှာ ဖြစ်ပါတယ်။
+                        <span class="title">Tech_News Apk</span><br>
+                        ဖုန်းနဲ့ပတ်သက်တဲ့သတင်း၊ ကွန်ပျူတာနဲ့ပတ်သတ်တဲ့သတင်း အပြင် အခြားနည်းပညာသတင်းများတွေကို အချိန်နဲ့တပြေးညီ တင်ပေးသွားမှာြဖစ်ပါတယ်။
                     </p>
                     <p>
-                        အချက်အလက်အသစ်တွေကိုလည်း ပုံမှန်ထည့်ထည့်ပေးသွားမှာပါ။
+                        အကြံပေးချင်တာရှိရင်လည်း ကျွန်တော်တို့ရဲ့ facebook page မှာ လာရောက်ပြောကြားနိုင်ပါတယ်။
+                    </p>
+
+                    <p>
+                    	Faebook page :<a href="https://www.facebook.com/mmsoftware100">www.facebook.com/mmsoftware100</a><br>
+                    	Contact : <a href="tel:+959678186401"><span>   </span><i class="fa fa-phone" aria-hidden="true"></i></a>
                     </p>
                     <p>
                         <br><center><span>Developed By:<a href="https://www.facebook.com/mmsoftware100">Team CS</a></span></center><br>
-                        <center>Version<span class="version"> 2.0</span></center>
+                        <center>Version<span class="version"> 1.0</span></center>
                     </p>
                 </div>	
 			</div>
@@ -161,7 +153,7 @@
 	<!-- Main layout -->
 
 	<!-- Footer -->
-	<footer class="page-footer pt-0 mt-5 rgba-stylish-light">
+	<footer class="page-footer pt-0 mt-5 rgba-stylish-light" style="display: none;">
 		<!-- Copyright -->
 		<div class="footer-copyright py-3 text-center">
 			<div class="container-fluid">Developed By : <a href="#" target="_blank"><a href="https://www.facebook.com/mmsoftware100"> TEAM CS </a>
